samples/_failures_safe/1761650629_0ee35d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_540d14ff.c: In function ‘main’:
./samples/SAFE/__tmp_540d14ff.c:167:20: error: missing terminating " character
  167 |             printf("Invalid edge input
      |                    ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_540d14ff.c:167:13: error: expected expression at end of input
  167 |             printf("Invalid edge input
      |             ^~~~~~
./samples/SAFE/__tmp_540d14ff.c:167:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_540d14ff.c:167:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_540d14ff.c:167:13: error: expected declaration or statement at end of input
